[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "*"

[dependencies.web-sys]
version = "0.3.83"
features = ['console', 'Document', 'Element', 'Event', 'HtmlButtonElement', 'HtmlInputElement', 'HtmlElement', 'Node', 'Window']
